--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "hoek": "^6.1.3",
     "ngf-bootstrap": "0.0.5",
     "rxjs": "~6.4.0",
     "toastr": "^2.1.4",
